# optyx

./: .gitignore  Cargo.toml  Makefile  README.md  fusion_network.tikz  optical_protocol_network.tikz  pyproject.toml  requirements.txt  tikzit.tikzstyles  xy_example.tikz
.github/workflows/: main.yml
docs/: api.rst  conf.py  index.rst  notebooks.rst
docs/_templates/: class.rst
docs/notebooks/: bose_hubbard.ipynb  bosonic-vqe-2.ipynb  bosonic-vqe.ipynb  classical_control.ipynb  compile_to_semm.ipynb  distributed-412-code.ipynb  distributed-422-code.ipynb  feed_forward_example.ipynb  fusion_gates.ipynb  graphix_workshop.ipynb  new_gates.ipynb  optyx-compilation.ipynb  optyx-vqe-experiment.ipynb  optyx_vs_perceval.csv  photon_distinguishability.ipynb  readme.ipynb  readme_example.ipynb  readme_example.md  tensor_network_simulation_example.ipynb  (+4 more)
examples/: Compiler.ipynb  Graph_to_Network.ipynb  Network_to_Protocol.ipynb  test_light_cones.ipynb  zw_examples.ipynb
notebooks/: distributed-412-code.ipynb  distributed-422-code.ipynb  distributed-422-stim.ipynb  feed_forward_example.ipynb  perceval.ipynb
optyx/: LO.py  __init__.py  _utils.py  channel.py  circuit.py  classical.py  diagram.py  feed_forward.py  graph6.py  graphs.py  lo.py  optyx.py  path.py  photonic.py  postselect_parser.py  qpath.py  qubit.py  qubits.py  test_grad.py  test_qpath.py  utils.py  zw.py  zx.py
src/: graph.rs  lib.rs  qpath.rs  zx.rs
test/: grad.py  qpath.py  test_backends.py  test_channel.py  test_classical.py  test_conjugation.py  test_converters.py  test_diagram.py  test_distinguishability.py  test_feed_forward.py  test_fusion.py  test_graphs.py  test_perceval.py  test_postselect_parser.py  test_qubit.py  test_zw.py  test_zw_2_circuit.py  test_zw_max_dims.py  test_zw_truncated_arrays.py  test_zx.py  test_zx_arrays.py
(+105 files in other folders)
