[build-system]
requires = ["setuptools>=42.0", "wheel", "setuptools_scm[toml]>=3.4"]

[project]
dynamic = ["version"]
name = "optyx"
description = "optyx"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "quantum computing",
    "string diagrams"
]
authors = [
  {name = "Giovanni de Felice"},
  {email = "giovanni.defelice@cambridgequantum.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering"
]
dependencies = [
  "discopy >= 1.1.5",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
]
docs  = [
    "sphinx",
    "sphinx-book-theme == 1.0.*",
    "myst-parser == 2.0.*",
    "nbsphinx == 0.9.*",
    "ipykernel == 6.23.*",
    "sphinxcontrib-youtube == 1.4.*",
    "jinja2 == 3.1.*",
    "sphinxcontrib-bibtex == 2.5.*",
    "IPython"
]

[project.urls]
Homepage = "https://cqcl.github.io/optyx/"
Documentation = "https://cqcl.github.io/optyx/"
Repository = "https://github.com/CQCL/optyx"
Issue-Tracker = "https://github.com/CQCL/optyx/issues"
Download = "https://pypi.org/project/optyx"

[tool.setuptools]
packages = [
    "optyx",
]

[tool.setuptools_scm]
write_to = "optyx/version.py"

[tool.flake8]
extend-ignore = [
    "E731",
    "E741",
    "E743",
    "F811",
]
per-file-ignores = [
    "__init__.py:F401"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "optyx",
]
addopts = "--doctest-modules"
